<resources>
    <string name="app_name">Toggl</string>
    <string name="editText">Name</string>
    <string name="go">GO!</string>
    <string name="selectProject">SELECT PROJECT</string>
    <string name="timer">0 sec</string>
    <string name="timerMenu">TIMER</string>
    <string name="Reports">Reports</string>
    <string name="Projects">Projects</string>
    <string name="Team">Team</string>
    <string name="title_activity_reports">Reports</string>
    <string name="title_activity_projects">Projects</string>
    <string name="title_activity_team">Team</string>
    <string name="stop">Stop</string>
</resources>
