<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/timerMenu"
        android:orderInCategory="1"
        android:title="@string/timerMenu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/Reports"
        android:orderInCategory="1"
        android:title="@string/Reports"
        app:showAsAction="never" />
    <item
        android:id="@+id/Projects"
        android:orderInCategory="2"
        android:title="@string/Projects"
        app:showAsAction="never" />
    <item
        android:id="@+id/Team"
        android:orderInCategory="3"
        android:title="@string/Team"
        app:showAsAction="never" />
</menu>
